--- a/code/MoodSync/app/src/main/res/layout/main_mood_card_item.xml
+++ b/code/MoodSync/app/src/main/res/layout/main_mood_card_item.xml
@@ -175,9 +175,10 @@
 
                 <TextView
                     android:id="@+id/song_title"
-                    android:layout_width="232dp"
+                    android:layout_width="199dp"
                     android:layout_height="match_parent"
                     android:layout_marginTop="2.5dp"
+                    android:layout_marginEnd="20dp"
                     android:layout_weight="1"
                     android:ellipsize="end"
                     android:maxLines="1"
@@ -187,6 +188,7 @@
 
                 <ImageButton
                     android:id="@+id/playButton"
+                    android:paddingTop="3dp"
                     android:layout_width="28dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
