--- a/code/MoodSync/app/src/main/res/layout/post_detail_dialog.xml
+++ b/code/MoodSync/app/src/main/res/layout/post_detail_dialog.xml
@@ -149,6 +149,7 @@
                             android:layout_width="226dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:layout_marginEnd="20dp"
                             android:ellipsize="end"
                             android:maxLines="1"
                             android:paddingTop="4dp"
@@ -160,6 +161,7 @@
                     <ImageButton
                         android:id="@+id/playButton"
                         android:layout_width="28dp"
+                        android:paddingTop="3dp"
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackgroundBorderless"
                         android:contentDescription="Play music"
